[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/opossum.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/enemy-death.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/Sound Effects/hurt1.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 15.7487, 10 )

[sub_resource type="Animation" id=2]

length = 0.6
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]

length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[node name="Enemy" type="KinematicBody2D" groups=[
"enemies",
]]

input_pickable = false
collision_layer = 4
collision_mask = 7
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
speed = 20
gravity = 750

[node name="Hitbox" type="CollisionShape2D" parent="." index="0"]

position = Vector2( -0.865325, 4.27957 )
scale = Vector2( 0.618744, 0.7123 )
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 32
collision_mask = 32
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Hitbox" type="CollisionShape2D" parent="HitBox" index="0"]

position = Vector2( -2.95345, 3.53947 )
scale = Vector2( 1.38839, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="2" groups=[
"enemies",
]]

texture = ExtResource( 2 )
hframes = 6
frame = 2
_sections_unfolded = [ "Animation" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = "walking"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/death = SubResource( 2 )
anims/walking = SubResource( 3 )
blend_times = [  ]

[node name="GroundCheckLeft" type="RayCast2D" parent="." index="4"]

enabled = true
exclude_parent = false
cast_to = Vector2( -45, 35 )
collision_mask = 1

[node name="GroundCheckRight" type="RayCast2D" parent="." index="5"]

enabled = true
exclude_parent = true
cast_to = Vector2( 30, 35 )
collision_mask = 1

[node name="DeathSound" type="AudioStreamPlayer2D" parent="." index="6"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]


